// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp should be created correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`GifExpertApp should show list default categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon Ball Z"
      key="Dragon Ball Z"
    />
    <GifGrid
      category="Kaladin"
      key="Kaladin"
    />
  </ol>
</Fragment>
`;
